--- a/src/components/MoviesList/MoviesList.css
+++ b/src/components/MoviesList/MoviesList.css
@@ -1,8 +1,7 @@
-.films-list {
+/* .films-list {
   background-color: #FFFFFF;
   margin-left: auto;
   margin-right: auto;
-
   padding: 0;
   border: 1px solid transparent;
   display: flex;
@@ -14,6 +13,8 @@
 }
 .ant-pagination {
   margin: 10px auto 20px;
+  width: 40%;
+  margin-left: 30%;
 }
 @media (max-width: 769px) {
   .films-list {
@@ -31,4 +32,24 @@
     padding: 20px 35px;  
     width: 70%;
   }
+  .tabs {
+    width: 20%;
+    margin-left: 40%;
+    margin-right: 40%;
+  }
+  .ant-tabs-tab {
+    width: 50%;
+    margin-left: 10%;
+  }
+ :where(.css-dev-only-do-not-override-3rel02).ant-pagination 
+ .ant-pagination-item-active a {
+  color: white;
+ }
 }
+:where(.css-dev-only-do-not-override-46krfd) 
+.ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
+  color: #1677ff !important;
+}
+.input__search {
+  margin-bottom: 20px;
+} */
