--- a/src/components/App.css
+++ b/src/components/App.css
@@ -25,7 +25,7 @@
 @media (max-width: 769px) {
   .films-list {
     flex-direction: column;
-    width: 100%;
+    width: 100% !important;
     /* display: block; */
     padding: 10px 20px;
   }
