--- a/src/components/CardFilm/CardFilm.css
+++ b/src/components/CardFilm/CardFilm.css
@@ -9,8 +9,9 @@
   box-shadow: 0px 3px 5px -1px rgba(210, 204, 204, 0.83) !important;
   color: #827E7E !important;
 }
-.rating__items {
-  display: flex;
+/* .rating__items {
+  display: flex !important;
+  flex-wrap: nowrap;
 }
 .rating__item {
   display: inline-block;
@@ -26,7 +27,6 @@
   left: 1px;
   bottom: 1px;
   right: 1px;
-  /* background: linear-gradient(to bottom, rgba(221, 220, 219, 1) 0%, rgba(209, 208, 206, 1) 100%); */
   z-index: 1;
 }
 .rating__item:before {
@@ -39,7 +39,6 @@
 }
 .star:before {
   background: #E9D100;
-  /* background: linear-gradient(to right, #E9D100 15%, transparent 19%);  */
 }
 .star__one::before {
   background: linear-gradient(to right, #E9D100 20%, rgba(209, 208, 206, 1) 10% ); 
@@ -67,6 +66,17 @@
 }
 .star__ninth:before {
   background: linear-gradient(to right, #E9D100 90%, rgb(209, 208, 206, 1) 5%);
+} */
+:where(.css-dev-only-do-not-override-3rel02).ant-flex-gap-middle {
+  gap: 8px !important;
+}
+:where(.css-dev-only-do-not-override-3rel02).ant-rate .ant-rate-star:not(:last-child) {
+  margin-inline-end: 6px !important;
+}
+:where(.css-dev-only-do-not-override-3rel02).ant-rate {
+  font-size: 13px !important;
+  display: flex !important;
+  justify-content: space-between;
 }
 .rating__circle {
   width: 30px;
