--- a/src/components/CardFilm/CardFilm.css
+++ b/src/components/CardFilm/CardFilm.css
@@ -77,12 +77,15 @@
   margin-inline-end: 2px !important;
 }
 :where(.css-dev-only-do-not-override-3rel02).ant-rate {
-  font-size: 16px !important;
   display: flex !important;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  flex-wrap: wrap !important;
+  font-size: 1.4rem !important;
 }
 :where(.css-3rel02).ant-rate {
   display: flex !important;
+  flex-wrap: wrap !important;
+  font-size: 1.1rem !important;
 }
 .rating__circle {
   width: 30px;
